# MessageQueue

./: .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  README.md
examples/: README.md  myq-broker.c  myq-consumer.c  myq-producer.c  myq-test.cpp  myq-topic.c
include/: admin_cmd.h  broker.h  broker_config.h  broker_manager.h  broker_storage.h  connection.h  connection_file.h  connection_socket.h  connection_zmq.h  consumer.h  file_details.h  log.h  monitor_zmq.h  myq_api.h  producer.h  utils.h
src/: myq_api.cpp
